force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Business_Entity_Type__c</fullName>
        <label>Business Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Structure__c</fullName>
        <label>Corporate Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_ownership_of_25__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct ownership of 25%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_own_your_business_location__c</fullName>
        <label>Do you own your business location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_same_mailing_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mailing address same as Billing Addr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYB_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYB Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYB_Status__c</fullName>
        <label>KYB Status</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Eligible_Amount__c</fullName>
        <label>Max Eligible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_Type__c</fullName>
        <label>Merchant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_years_in_business__c</fullName>
        <label>Number of years in business</label>
        <picklist>
            <picklistValues>
                <fullName>testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ownership_at_least_25__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership at least 25%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Approved_Amount__c</fullName>
        <label>Pre-Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SE_NO__c</fullName>
        <label>SE NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <picklist>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <label>TIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Financial_Assets__c</fullName>
        <label>Total Financial Assets</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Role_in_the_Company__c</fullName>
        <label>Your Role in the Company</label>
        <picklist>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clcommon__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clcommon__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to define the working hours and holidays for the account.</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Default_Bill_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default bill group. Mandatory for invoice generation.</description>
        <inlineHelpText>The default bill group. Mandatory for invoice generation.</inlineHelpText>
        <label>Default Bill Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>clcommon__Bill_Group__c.clcommon__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>clcommon__Bill_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Default_Payment_Spread__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the payment spread used for allocating the cash-receipt-application amount to the dues selected for this borrower.</description>
        <inlineHelpText>The default payment spread</inlineHelpText>
        <label>Default Payment Spread</label>
        <referenceTo>clcommon__Payment_Spread__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Exposure_Relationship__c</fullName>
        <description>Direct exposure of account considering all relationships</description>
        <inlineHelpText>Direct exposure of account considering all relationships</inlineHelpText>
        <label>Direct Exposure(Relationship)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Exposure__c</fullName>
        <description>Total amount of credit extended to the borrower</description>
        <inlineHelpText>Total amount of credit extended to the borrower</inlineHelpText>
        <label>Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Proposed_Exposure__c</fullName>
        <description>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</description>
        <inlineHelpText>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</inlineHelpText>
        <label>Direct Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>clcommon__Financial_Statement_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selected financial statement template for account</description>
        <inlineHelpText>Selected financial statement template for account</inlineHelpText>
        <label>Financial Statement Template</label>
        <referenceTo>clcommon__Financial_Statement_Template__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Generate_Invoice_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if invoices to be generated for this Account</description>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Exposure_Relationship__c</fullName>
        <description>Indirect exposure of account considering all relationships</description>
        <inlineHelpText>Indirect exposure of account considering all relationships</inlineHelpText>
        <label>Indirect Exposure(Relationship)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Exposure__c</fullName>
        <description>Total amount of credit cosigned or guaranteed by the customer</description>
        <inlineHelpText>Total amount of credit cosigned or guaranteed by the customer</inlineHelpText>
        <label>Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Proposed_Exposure__c</fullName>
        <description>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</description>
        <inlineHelpText>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</inlineHelpText>
        <label>Indirect Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Industry_Classification_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Industry classification code for the account</description>
        <inlineHelpText>Industry classification code for the account</inlineHelpText>
        <label>Industry Classification Code</label>
        <referenceTo>clcommon__Industry_Classification_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Last_Modified_Date_Exposure__c</fullName>
        <description>Last date on which credit exposure was calculated</description>
        <inlineHelpText>Last date on which credit exposure was calculated</inlineHelpText>
        <label>Last Modified Date(Exposure)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>clcommon__Legal_Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Type</label>
        <referenceTo>clcommon__Legal_Entity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>genesis__Business_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Information</label>
        <referenceTo>genesis__Business_Information__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>genesis__Total_Risk_Score__c</fullName>
        <label>Total Risk Score</label>
        <summarizedField>genesis__Account_Scorecard_Result__c.genesis__Weighted_Score__c</summarizedField>
        <summaryForeignKey>genesis__Account_Scorecard_Result__c.genesis__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>genesis__Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Email__c</fullName>
        <description>email for yodlee fastlink2.0</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Password__c</fullName>
        <description>Password for Yodlee Username.</description>
        <label>Yodlee_Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Username registered with Yodlee. This Username can have multiple bank accounts linked with Yodlee.</description>
        <label>Yodlee Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mfiflexUtil__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>genesis__AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>genesis__MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>genesis__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>genesis__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>genesis__PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>clcommon__Default_bill_group_not_present</fullName>
        <active>true</active>
        <description>Default Bill Group must be set to generate invoices</description>
        <errorConditionFormula>clcommon__Generate_Invoice_Letter__c = true &amp;&amp;  clcommon__Default_Bill_Group__c = null</errorConditionFormula>
        <errorMessage>&quot;Default Bill Group&quot; must be set to generate invoices</errorMessage>
    </validationRules>
</CustomObject>