force-app/main/default/objects/Account/validationRules/clcommon__Default_bill_group_not_present.validationRule-meta.xml
<ValidationRule>
    <fullName>clcommon__Default_bill_group_not_present</fullName>
    <active>true</active>
    <description>Default Bill Group must be set to generate invoices</description>
    <errorConditionFormula>clcommon__Generate_Invoice_Letter__c = true &amp;&amp;  clcommon__Default_Bill_Group__c = null</errorConditionFormula>
    <errorMessage>&quot;Default Bill Group&quot; must be set to generate invoices</errorMessage>
</ValidationRule>